--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 </head>
 <body>
     <div class="container">
-        <img class="header-image" src="https://via.placeholder.com/1200x100.png?text=Nagłówek+Pulpitu+OEE" alt="Nagłówek Pulpitu OEE">
+        <img class="header-image" src="https://via.placeholder.com/1200x100.png?text=Nagłówek+Pulpitu+OEE" alt="Nagasaswek Pulpitu OEE">
 
         <div class="top-bar">
             <div class="top-bar-item" id="mainDisplayField">
@@ -350,7 +350,7 @@ document.addEventListener('DOMContentLoaded', function() {
     // 3. Wartością `null`, jeśli pole ma być puste (lub pokazywać standardowe komunikaty).
     //    Przykład: null
     // ====================================================================
-    const mainDisplaySource = { row: 45, col: 'E', isDate: true }; // <--- ZMIEŃ TO!
+    const mainDisplaySource = { row: 43, col: 'E', isDate: true }; // <--- ZMIEŃ TO!
     // ====================================================================
 
 
