--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@ document.addEventListener('DOMContentLoaded', function() {
     // 3. Wartością `null`, jeśli pole ma być puste (lub pokazywać standardowe komunikaty).
     //    Przykład: null
     // ====================================================================
-    const mainDisplaySource = { row: 43, col: 'E', isDate: true }; // <--- ZMIEŃ TO!
+    const mainDisplaySource = { row: 1, col: 'C', isDate: true }; // <--- ZMIEŃ TO!
     // ====================================================================
 
 
