--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         .top-bar {
             display: flex;
             flex-wrap: nowrap;
-            justify-content: space-between;
+            justify-content: space-between; /* To zachowa odstępy między elementami */
             align-items: center;
             margin-bottom: 15px;
             gap: 10px;
@@ -39,27 +39,14 @@
         }
 
         .top-bar-item {
-            min-width: 100px;
+            min-width: 100px; /* Nadal dajemy minimalną szerokość, żeby nie były zbyt ściśnięte */
             text-align: center;
             overflow: hidden;
             text-overflow: ellipsis;
             white-space: nowrap;
         }
 
-        /* Styl dla pola głównego, które ma być puste */
-        #mainDisplayField {
-            font-size: 20px;
-            font-weight: bold;
-            color: #333;
-            text-align: left;
-            flex-shrink: 0;
-            min-width: 140px;
-            /* Ustawienia, które sprawią, że pole będzie wyglądać na puste, ale zachowa rozmiar */
-            background-color: transparent; /* Przezroczyste tło */
-            border: 1px solid transparent; /* Przezroczysta ramka */
-            padding: 5px 10px; /* Nadal zachowujemy padding, aby element miał wymiary */
-            border-radius: 4px;
-        }
+        /* Usunięto style dla #mainDisplayField, bo elementu już nie ma */
 
         .select-wrapper {
             flex-shrink: 0;
@@ -156,11 +143,7 @@
                 text-align: center;
                 flex: 1;
             }
-            #mainDisplayField {
-                font-size: 16px;
-                min-width: 100px;
-                text-align: center;
-            }
+            /* Usunięto styl dla #mainDisplayField, bo elementu już nie ma */
             select, button {
                 width: 100%;
                 max-width: none;
@@ -185,8 +168,6 @@
         <img class="header-image" src="https://via.placeholder.com/1200x100.png?text=Nagłówek+Pulpitu+OEE" alt="Nagłówek Pulpitu OEE">
 
         <div class="top-bar">
-            <div class="top-bar-item" id="mainDisplayField">
-                </div>
             <div class="top-bar-item select-wrapper">
                 <select id="sheetSelector">
                     <option value="">Wybierz linię</option>
@@ -206,7 +187,7 @@
             <div class="top-bar-item button-wrapper">
                 <button id="refreshButton">ODŚWIEŻ</button>
             </div>
-        </div>
+            </div>
 
         <table>
             <tr>
@@ -332,13 +313,7 @@ document.addEventListener('DOMContentLoaded', function() {
     const sheetId = '1gcWHcIZv7OMuU1bNNQ5P7XFLNpLoBsabXbG9hJImGpc'; // <-- ID Twojego Arkusza Google
     const sheetSelector = document.getElementById('sheetSelector');
     const refreshButton = document.getElementById('refreshButton');
-    const mainDisplayField = document.getElementById('mainDisplayField');
 
-    // ====================================================================
-    // === USTAWIENIE TEGO NA `null` SPRAWI, ŻE POLE BĘDZIE PUSTE ========
-    // ====================================================================
-    const mainDisplaySource = null; // <--- ZMIENIONE NA `null`
-    // ====================================================================
 
 
     // Funkcja do konwersji litery kolumny na indeks liczbowy (0-indexed)
@@ -364,12 +339,13 @@ document.addEventListener('DOMContentLoaded', function() {
         });
     }
 
-    // Funkcja do formatowania daty z numeru seryjnego Google Sheets (nie będzie używana dla mainDisplayField, ale zostawiona dla innych pól)
+    // Funkcja do formatowania daty z numeru seryjnego Google Sheets
     function formatGoogleSheetDate(serial) {
         if (!serial || isNaN(serial) || parseFloat(serial) === 0) {
             return '';
         }
         let adjustedSerial = parseFloat(serial);
+        // Korekta błędu przestępnego Excela z 1900 r.
         if (adjustedSerial < 61) {
             adjustedSerial -= 1;
         }
@@ -383,13 +359,7 @@ document.addEventListener('DOMContentLoaded', function() {
         return `${day}.${month}.${year}`;
     }
 
-    // Funkcja do ustawiania wartości w głównym polu - teraz po prostu czyści tekst
-    function setMainDisplayValue(data = null) {
-        mainDisplayField.textContent = ''; // Zawsze ustawia puste pole
-    }
 
-
-    // Funkcja do ustawiania tekstu w danej komórce HTML (dla pozostałych pól danych)
     function setFieldValue(elementId, value, isDate = false) {
         const element = document.getElementById(elementId);
         if (element) {
@@ -498,12 +468,11 @@ document.addEventListener('DOMContentLoaded', function() {
     async function updateDashboard() {
         const selectedSheetName = sheetSelector.value;
 
-        // Tutaj po prostu czyścimy pole główne
-        mainDisplayField.textContent = '';
+        // Nie ma już mainDisplayField, więc nie musimy go czyścić tutaj
         clearAllDataFields();
 
         if (!selectedSheetName) {
-            // Jeśli nie wybrano linii, pole pozostaje puste
+            // Jeśli nie wybrano linii, nic się nie dzieje (pole już nie istnieje)
             return;
         }
 
@@ -518,10 +487,6 @@ document.addEventListener('DOMContentLoaded', function() {
             const csvText = await response.text();
             const data = parseCsv(csvText);
 
-            // Zaktualizuj główne pole wyświetlania (teraz zawsze puste)
-            setMainDisplayValue(data); // `data` jest przekazywane, ale funkcja je zignoruje
-
-            // Zaktualizuj pozostałe pola
             for (const htmlId in cellMappings) {
                 const map = cellMappings[htmlId];
                 const rowIndexInData = map.row - 1;
@@ -536,8 +501,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
         } catch (error) {
             console.error('Błąd podczas pobierania lub przetwarzania danych:', error);
-            // Nawet w przypadku błędu, pole główne ma być puste
-            mainDisplayField.textContent = '';
+            // Brak mainDisplayField do wyświetlania błędu, więc tylko logujemy
             clearAllDataFields();
         }
     }
@@ -545,9 +509,7 @@ document.addEventListener('DOMContentLoaded', function() {
     sheetSelector.addEventListener('change', updateDashboard);
     refreshButton.addEventListener('click', updateDashboard);
 
-    // Wywołaj updateDashboard przy starcie, aby upewnić się, że pole jest puste od razu
-    mainDisplayField.textContent = '';
-    // Jeśli jest wybrana linia, pobierz dane, w przeciwnym razie wyczyść resztę pól
+    // Wywołaj updateDashboard przy starcie
     if (sheetSelector.value) {
         updateDashboard();
     } else {
