--- a/index.html
+++ b/index.html
@@ -39,25 +39,30 @@
         }
 
         .top-bar-item {
-            flex: 1;
-            min-width: 0;
+            min-width: 100px;
             text-align: center;
-        }
-
-        .cell-display {
-            background: #f8f9fa;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            padding: 6px 8px;
-            font-size: 14px;
-            white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
+            white-space: nowrap;
+        }
+
+        /* Nowy styl dla okienka "DUPA" */
+        #displayDupaField {
+            font-size: 20px;
+            font-weight: bold;
+            color: #333;
+            text-align: center; /* Wyśrodkowanie tekstu */
+            background-color: #f0f0f0; /* Lekkie tło, aby wyróżnić okienko */
+            padding: 5px 10px;
+            border-radius: 4px;
+            border: 1px solid #ddd;
+            flex-shrink: 0;
+            min-width: 140px; /* Minimalna szerokość, aby się ładnie wyświetlało */
         }
 
         .select-wrapper {
             flex-shrink: 0;
-            min-width: 0;
+            min-width: 140px;
             text-align: center;
         }
 
@@ -72,7 +77,7 @@
 
         .button-wrapper {
             flex-shrink: 0;
-            min-width: 0;
+            min-width: 90px;
             text-align: center;
         }
 
@@ -142,14 +147,21 @@
 
         @media (max-width: 768px) {
             .top-bar {
-                flex-wrap: wrap;
+                flex-wrap: nowrap;
             }
             .top-bar-item {
                 min-width: unset;
-                width: 100%;
-                margin-bottom: 5px;
+                width: auto;
+                text-align: center;
+                flex: 1;
             }
-            select, button, .cell-display {
+            /* Dostosowanie dla nowego pola "DUPA" na małych ekranach */
+            #displayDupaField {
+                font-size: 16px;
+                min-width: 100px;
+                text-align: center;
+            }
+            select, button {
                 width: 100%;
                 max-width: none;
                 font-size: 12px;
@@ -173,8 +185,8 @@
         <img class="header-image" src="https://via.placeholder.com/1200x100.png?text=Nagłówek+Pulpitu+OEE" alt="Nagłówek Pulpitu OEE">
 
         <div class="top-bar">
-            <div class="top-bar-item">
-                <div id="cellC1Display" class="cell-display">Ładowanie...</div>
+            <div class="top-bar-item" id="displayDupaField">
+                <strong>DUPA</strong>
             </div>
             <div class="top-bar-item select-wrapper">
                 <select id="sheetSelector">
@@ -318,10 +330,11 @@
 
 <script>
 document.addEventListener('DOMContentLoaded', function() {
-    const sheetId = '1gcWHcIZv7OMuU1bNNQ5P7XFLNpLoBsabXbG9hJImGpc';
+    const sheetId = '1gcWHcIZv7OMuU1bNNQ5P7XFLNpLoBsabXbG9hJImGpc'; // <-- ID Twojego Arkusza Google
     const sheetSelector = document.getElementById('sheetSelector');
     const refreshButton = document.getElementById('refreshButton');
-    const cellC1Display = document.getElementById('cellC1Display');
+    // Usunięto mainDisplayField
+    // const mainDisplayField = document.getElementById('mainDisplayField');
 
     // Funkcja do konwersji litery kolumny na indeks liczbowy (0-indexed)
     function getGoogleSheetColumnIndex(colLetter) {
@@ -346,13 +359,12 @@ document.addEventListener('DOMContentLoaded', function() {
         });
     }
 
-    // Funkcja do formatowania daty z numeru seryjnego Google Sheets
+    // Ta funkcja nie będzie już używana do displayDupaField
     function formatGoogleSheetDate(serial) {
         if (!serial || isNaN(serial) || parseFloat(serial) === 0) {
             return '';
         }
         let adjustedSerial = parseFloat(serial);
-        // Korekta błędu przestępnego Excela z 1900 r.
         if (adjustedSerial < 61) {
             adjustedSerial -= 1;
         }
@@ -366,7 +378,6 @@ document.addEventListener('DOMContentLoaded', function() {
         return `${day}.${month}.${year}`;
     }
 
-    // Funkcja do ustawiania tekstu w danej komórce HTML (dla pozostałych pól danych)
     function setFieldValue(elementId, value, isDate = false) {
         const element = document.getElementById(elementId);
         if (element) {
@@ -384,27 +395,30 @@ document.addEventListener('DOMContentLoaded', function() {
         }
     }
 
-    // --- MAPOWANIE POZOSTAŁYCH PÓL HTML DO KOMÓREK W ARKUSZU GOOGLE ---
+    // --- MAPOWANIE PÓL HTML DO KOMÓREK W ARKUSZU GOOGLE ---
     const cellMappings = {
-        // OEE (przykładowe mapowanie)
+        // Usunięto mainDisplayField z mapowania
+        // 'mainDisplayField': { row: 45, col: 'E', isDate: true },
+
+        // OEE (przykładowe mapowanie, dostosuj do swojego arkusza)
         'oeeShift1': { row: 2, col: 'D' },
         'oeeShift2': { row: 2, col: 'E' },
         'oeeShift3': { row: 2, col: 'F' },
         'oeeTotal': { row: 2, col: 'C' },
 
-        // OK (przykładowe mapowanie)
+        // OK (przykładowe mapowanie, dostosuj do swojego arkusza)
         'okShift1': { row: 9, col: 'D' },
         'okShift2': { row: 9, col: 'E' },
         'okShift3': { row: 9, col: 'F' },
         'okTotal': { row: 9, col: 'C' },
 
-        // NOK (przykładowe mapowanie)
+        // NOK (przykładowe mapowanie, dostosuj do swojego arkusza)
         'nokShift1': { row: 10, col: 'D' },
         'nokShift2': { row: 10, col: 'E' },
         'nokShift3': { row: 10, col: 'F' },
         'nokTotal': { row: 10, col: 'C' },
 
-        // GODZINY - WIERSZ 1 (przykładowe mapowanie)
+        // GODZINY - WIERSZ 1 (przykładowe mapowanie, dostosuj do swojego arkusza)
         'h6_r1': { row: 14, col: 'E' },
         'h7_r1': { row: 15, col: 'E' },
         'h8_r1': { row: 16, col: 'E' },
@@ -432,7 +446,7 @@ document.addEventListener('DOMContentLoaded', function() {
         'h4_r1': { row: 36, col: 'E' },
         'h5_r1': { row: 37, col: 'E' },
 
-        // GODZINY - WIERSZ 2 (przykładowe mapowanie)
+        // GODZINY - WIERSZ 2 (przykładowe mapowanie, dostosuj do swojego arkusza)
         'h6_r2': { row: 14, col: 'C' },
         'h7_r2': { row: 15, col: 'C' },
         'h8_r2': { row: 16, col: 'C' },
@@ -470,17 +484,21 @@ document.addEventListener('DOMContentLoaded', function() {
         timeCells.forEach(cell => {
             cell.textContent = '';
         });
-        cellC1Display.textContent = 'Ładowanie...';
     }
 
     async function updateDashboard() {
         const selectedSheetName = sheetSelector.value;
-
-        clearAllDataFields();
+        // Zmieniono: displayDupaField nie będzie "ładować" ani zależeć od danych z arkusza
+        const displayDupaField = document.getElementById('displayDupaField');
+        if (displayDupaField) {
+            displayDupaField.innerHTML = '<strong>DUPA</strong>'; // Zawsze wyświetlaj "DUPA"
+        }
+        clearAllDataFields(); // Wyczyszczenie reszty danych
 
         if (!selectedSheetName) {
-            cellC1Display.textContent = 'Wybierz linię';
-            return;
+            // Zmieniono: displayDupaField nie jest polem do wyboru linii
+            // mainDisplayField.innerHTML = '<strong>Wybierz linię</strong>';
+            return; // Nic nie rób, jeśli nie wybrano linii, bo nie ma danych do pobrania
         }
 
         const range = `A1:M50`;
@@ -494,14 +512,6 @@ document.addEventListener('DOMContentLoaded', function() {
             const csvText = await response.text();
             const data = parseCsv(csvText);
 
-            // Pobierz wartość z komórki C1 (wiersz 0, kolumna 2 w indeksowaniu 0-bazowym)
-            if (data[0] && data[0][2] !== undefined) {
-                cellC1Display.textContent = data[0][2] || '(pusta)';
-            } else {
-                cellC1Display.textContent = 'Brak danych';
-            }
-
-            // Zaktualizuj pozostałe pola
             for (const htmlId in cellMappings) {
                 const map = cellMappings[htmlId];
                 const rowIndexInData = map.row - 1;
@@ -516,7 +526,8 @@ document.addEventListener('DOMContentLoaded', function() {
 
         } catch (error) {
             console.error('Błąd podczas pobierania lub przetwarzania danych:', error);
-            cellC1Display.textContent = 'Błąd ładowania';
+            // Zmieniono: displayDupaField nie pokazuje błędu ładowania danych
+            // mainDisplayField.innerHTML = '<strong>Błąd ładowania danych!</strong>';
             clearAllDataFields();
         }
     }
@@ -524,10 +535,17 @@ document.addEventListener('DOMContentLoaded', function() {
     sheetSelector.addEventListener('change', updateDashboard);
     refreshButton.addEventListener('click', updateDashboard);
 
-    // Wywołaj updateDashboard przy starcie
+    // Wywołaj updateDashboard przy starcie, aby od razu wyświetlić "DUPA"
+    const initialDisplayDupaField = document.getElementById('displayDupaField');
+    if (initialDisplayDupaField) {
+        initialDisplayDupaField.innerHTML = '<strong>DUPA</strong>';
+    }
+
+    // Po uruchomieniu, jeśli jest już wybrana linia, załaduj dane
     if (sheetSelector.value) {
         updateDashboard();
     } else {
+        // Jeśli nie ma wybranej linii, nic więcej nie rób, "DUPA" już się wyświetla
         clearAllDataFields();
     }
 });
